# PolisJAPAN

./: .gitignore  README.md  session-handoff-for-claude-code.md
Client/: README.md  (+1 more)
Server/: .env  (+3 more)
Server/web/: .env.example  Dockerfile  Dockerfile.lambda  Dockerfile.lambda-chromium  pyproject.toml
Server/web/api/: logger.py  main.py
Server/web/api/configs/: __init__.py  constants.py  user_auth.py
Server/web/api/configs/development/: constants.py  credentials.py  database.py
Server/web/api/core/: common_cruds.py  common_route.py  common_schema.py  common_service.py
Server/web/api/cruds/: __init__.py  t_account.py  t_draft.py  t_user.py  t_user_add.py
Server/web/api/lambda_handlers/: batch_create.py  batch_update.py
Server/web/api/models/: tables.py  types.py
Server/web/api/repositories/: __init__.py  draft.py  draft_store_dynamo.py  draft_store_mysql.py
Server/web/api/routers/: admin.py  batch.py  theme.py  user.py
Server/web/api/schemas/: admin.py  batch.py  theme.py  user.py
Server/web/api/services/: admin.py  batch.py  theme.py  user.py
Server/web/api/utils/: __init__.py  common.py  csv.py  error.py  html_parser.py  security.py  storage_s3.py  time.py  web_loader_chrome.py  web_loader_httpx.py
Server/web/scripts/: migrate_drafts_to_dynamodb.py
Server/web/tests/: conftest.py  test_batch_service.py  test_common_service.py  test_configs_serverless.py  test_draft_store_dynamo.py  test_draft_store_factory.py  test_lambda_handlers.py  test_main_handler.py  test_migrate_script.py  test_schemas_batch.py  test_schemas_theme.py  test_storage_s3.py
(+155 files in other folders)
