[project]
name = "web-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-memcached (>=1.62,<2.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "pytz (>=2025.2,<2026.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "aioboto3 (>=15.1.0,<16.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "selenium (>=4.36.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "langchain-core (>=0.3.78,<0.4.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "ddgs (>=9.6.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pip-licenses (>=5.5.0,<6.0.0)"
]
